add e2e correlation engine
Signed-off-by: Subhobrata Dey <sbcd90@gmail.com>